--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
 
  * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'poppins', sans-serif;
+    font-family: "Roboto Slab", serif;
 }
 
-body{
+body {
     background: #fff7f9;
 }
 
@@ -82,9 +82,16 @@ body{
 .home-content p {
     font-size : 16px;
     margin: 20px 0 40px;
+    margin-bottom: 10px;
 }
 
-.btn {
+.home-content h3 {
+    font-size : 23px;
+    font-weight: 700;
+    margin-top: 0;
+}
+
+.button-terang {
     position: relative;
     display: inline-flex;
     justify-content: center;
@@ -98,10 +105,12 @@ body{
     text-decoration: none;
     font-weight: 600;
     letter-spacing: 1px;
+    margin-top: 20px;
     z-index: 1;
 }
 
-.btn::before{
+/* GLOW BLUR*/
+.button-terang::before{
     content: '';
     position: absolute;
     top: 0;
@@ -116,11 +125,12 @@ body{
     transition: .5s ease;
 }
 
-.btn:hover::before {
+.button-terang:hover::before {
     background-position: 100% 0;
 }
 
-.btn::after{
+/* GRADIENT MAIN*/
+.button-terang::after{
     content: '';
     position: absolute;
     top: 0;
@@ -134,8 +144,14 @@ body{
     transition: .5s ease;
 }
 
-.btn:hover:after{
+.button-terang:hover:after{
     background-position: 100% 0;
+}
+
+.home-sci i {
+    font-size: 30px;
+    color: #898989;
+    z-index: 2;
 }
 
 .home-sci a {
@@ -235,11 +251,59 @@ body{
 
 .image img {
     position: absolute;
-    top: 30px;
+    top: 0px;
     left: 50%;
     transform: translate(-50%);
     max-width: 350px;
     object-fit: cover;
+}
+
+/* DARK MODE */
+
+body.dark-mode {
+    background: #121212;
+    color: white;
+}
+
+.dark-mode .header {
+    background: #877f7d;
+}
+
+.dark-mode .home {
+    background: #121212;
+}
+
+.dark-mode .logo {
+    color: #ffffff;
+}
+
+.dark-mode .navbar a {
+    color: #ffffff;
+}
+
+.dark-mode .home-content {
+    color: #ffffff;
+}
+
+.dark-mode .home-sci i {
+    color: #ffeff2;
+}
+
+.dark-mode .home-sci a {
+    background: linear-gradient(45deg, #ff6fff, #d100ff);
+}
+
+.dark-mode .home-sci a::before {
+    background: linear-gradient(45deg, #ff6fff, #d100ff);
+}
+
+.dark-mode .home-sci a::after {
+    background: #000;
+}
+
+/* SMOOTH TRANSITION */
+body {
+    transition: background 0.4s, color 0.4s;
 }
 
 /* KEYWORDS ANIMATION */
